@@ -11,6 +11,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
  - Add CopainDavantAPI
  - Add SkiplyAPI
  - Add SocieteNinjaAPI
+ - Add PappersAPI
+ - Add QwantAPI
  - Add Pip install script
 
 ### Deleted
